# MosleyOpenApplication

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  CheckBoxDelegate.cpp  CheckBoxDelegate.h  CommonStructs.h  CoursesDialog.cpp  CoursesDialog.h  CsvExporter.cpp  CsvExporter.h  DailyLeaderboardModel.cpp  DailyLeaderboardModel.h  DailyLeaderboardWidget.cpp  DailyLeaderboardWidget.h  DatabaseManager.cpp  DatabaseManager.h  Exporter.h  HolesTransposedModel.cpp  HolesTransposedModel.h  MainWindow.cpp  MainWindow.h  Makefile  MosleyOpen  PlayerDialog.cpp  PlayerDialog.h  PlayerEntryWidget.h  PlayerListWidget.cpp  PlayerListWidget.h  ScoreEntryDialog.cpp  ScoreEntryDialog.h  ScoreTableModel.cpp  ScoreTableModel.h  SpinBoxDelegate.cpp  SpinBoxDelegate.h  TeamAssemblyDialog.cpp  TeamAssemblyDialog.h  TeamLeaderboardModel.cpp  (+13 more)
.qt/: QtDeploySupport.cmake
MosleyOpen_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
MosleyOpen_autogen/EWIEGA46WW/: moc_CheckBoxDelegate.cpp  moc_CheckBoxDelegate.cpp.d  moc_CoursesDialog.cpp  moc_CoursesDialog.cpp.d  moc_DailyLeaderboardModel.cpp  moc_DailyLeaderboardModel.cpp.d  moc_DailyLeaderboardWidget.cpp  moc_DailyLeaderboardWidget.cpp.d  moc_HolesTransposedModel.cpp  moc_HolesTransposedModel.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_PlayerDialog.cpp  moc_PlayerDialog.cpp.d  moc_PlayerListWidget.cpp  moc_PlayerListWidget.cpp.d  moc_ScoreEntryDialog.cpp  moc_ScoreEntryDialog.cpp.d  moc_ScoreTableModel.cpp  moc_ScoreTableModel.cpp.d  moc_SpinBoxDelegate.cpp  moc_SpinBoxDelegate.cpp.d  moc_TeamAssemblyDialog.cpp  moc_TeamAssemblyDialog.cpp.d  moc_TeamLeaderboardModel.cpp  moc_TeamLeaderboardModel.cpp.d  moc_TeamLeaderboardWidget.cpp  moc_TeamLeaderboardWidget.cpp.d  moc_TournamentLeaderboardDialog.cpp  moc_TournamentLeaderboardDialog.cpp.d  moc_TournamentLeaderboardModel.cpp  moc_TournamentLeaderboardModel.cpp.d  moc_TournamentLeaderboardWidget.cpp  moc_TournamentLeaderboardWidget.cpp.d
tests/: main_test.cpp  test_example.cpp  test_example.h  test_playerdialog.cpp  test_playerdialog.h  tournament.db
